--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
-u-boot-tools (2015.07+wb-1) UNRELEASED; urgency=medium
+u-boot-tools (2015.07+wb-2) UNRELEASED; urgency=medium
+
+  * add dumpimage
+
+ -- Alexey Ignatov <lexszero@gmail.com>  Wed, 23 Sep 2015 14:05:41 +0000
+
+u-boot-tools (2015.07+wb-1) stable; urgency=medium
 
   * u-boot-tools
 
- -- Alexey Ignatov <lexszero@gmail.com>  Wed, 23 Sep 2015 07:58:52 +0000
+ -- alexey ignatov <lexszero@gmail.com>  wed, 23 sep 2015 14:05:41 +0000
