--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-u-boot-tools (2015.07+wb-2) UNRELEASED; urgency=medium
+u-boot-tools (2015.07+wb-3) stable; urgency=medium
 
   * add dumpimage
+  * add fit_info
 
- -- Alexey Ignatov <lexszero@gmail.com>  Wed, 23 Sep 2015 14:05:41 +0000
+ -- Alexey Ignatov <lexszero@gmail.com>  Wed, 23 Sep 2015 16:25:27 +0000
 
 u-boot-tools (2015.07+wb-1) stable; urgency=medium
 
